Fixed Hero Spacing

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -219,7 +219,7 @@ a:hover {
   color: var(--textLink);
   margin: 0;
   font-size: 60px;
-  line-height: 1.2;
+  line-height: 0.5;
   opacity: 0;
   animation: HeroAnimation 2s 0.1s forwards cubic-bezier(0.2, 0.8, 0.2, 1);
 }
